# fivefold

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PROJECT_MEMORY.md  README.md  TASKS.md  vercel.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  app.py  pyproject.toml  vercel.json
backend/data/: archetypes.json
backend/fivefold/: __init__.py  __main__.py  api.py  composition.py  contextual.py  engine.py  loader.py  models.py  win_conditions.py
backend/tests/: test_api.py  test_engine.py  test_win_conditions.py
data/: champions.json  meta_tiers.json
docs/: DATA_AUDIT.md  DESIGN.md
frontend/: .env.example  .env.local.example  .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AxisBar.tsx  BanRow.tsx  ChampionCard.tsx  ChampionGrid.tsx  ChampionPortrait.tsx  ColorBadge.tsx  ColorBadges.tsx  PhaseProgress.tsx  RecommendationCard.tsx  RecommendationPanel.tsx  RoleIcon.tsx  SideBanner.tsx  SideColumn.tsx  Slot.tsx  ThemeToggle.tsx  TurnIndicator.tsx
frontend/lib/: api.ts  colors.ts  ddragon.ts  draftState.ts  turnOrder.ts  types.ts  useTheme.ts
scripts/: add_counter_tags.py  add_roles.py  enrich_data.py  infer_win_conditions.py  tag.py
