[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fivefold-backend"
version = "0.1.0"
description = "Fivefold scoring engine + API"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "fastapi>=0.110",
]

[project.optional-dependencies]
api = ["uvicorn[standard]>=0.29", "httpx>=0.27"]
llm = ["anthropic>=0.34"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["fivefold*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
